[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lptlib"
version = "0.0.4a6"
authors = [
    {name="Dilip Kalagotla"},
    {email="dilipkalagotla@gmail.com"},
    ]
description = "One-way coupled Lagrangian Particle Tracking algorithms."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "seaborn",
    "tqdm",
    "mpi4py",
    "scikit-learn",
    ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering",
]

[tool.ruff]
exclude = [
    ".git",
    "data",
    "build",
    ".tox",
    ".eggs",
]

[project.urls]
homepage = "https://github.com/kalagotla/project-arrakis"
issues = "https://github.com/kalagotla/project-arrakis/issues"