[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lptlib"
version = "0.0.6"
authors = [
    {name="Dilip Kalagotla", email="dilipkalagotla@gmail.com"},
    ]
description = "One-way coupled Lagrangian Particle Tracking algorithms."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "seaborn",
    "tqdm",
    "mpi4py",
    "scikit-learn",
    "h5py>=3.15.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering",
]
license = {text = "MIT AND (Apache-2.0 OR BSD-2-Clause)"}

[project.optional-dependencies]
# GPU build of PyTorch (CUDA 12.8, Blackwell-compatible). Install with
#     uv sync --extra gpu
# Without this extra, gpytorch pulls the CPU build of torch from PyPI.
gpu = [
    "torch",
]

[tool.ruff]
exclude = [
    ".git",
    "data",
    "build",
    ".tox",
    ".eggs",
]

[project.urls]
homepage = "https://github.com/kalagotla/lptlib"
issues = "https://github.com/kalagotla/lptlib/issues"

[tool.uv]
link-mode = "copy"

[tool.uv.workspace]
members = [
    "external/forebody_articulation",
]

# When --extra gpu is active, resolve torch from the official PyTorch CUDA 12.8
# index (Blackwell-compatible) instead of the CPU build on PyPI.
[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "extra == 'gpu'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
